--- a/index.css
+++ b/index.css
@@ -29,12 +29,12 @@ input{
 
 #gt{
     text-align: center;
-    color:green;
+    color: red;
 }
  #p{
     width: 300px;
     height: 200px;
-    border: 1px solid black;
+    border: 2px solid black;
     margin-top: 10%;
     margin-left: 37%;
     text-align: center;
@@ -42,3 +42,8 @@ input{
     margin-left: 40%;
     font-size: larger;
  }
+
+#p:hover{
+    width: 350px;
+    height: 250px;
+}
